--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,6 +23,12 @@
       {
         "requireForBlockBody": true
       }
+    ],
+    "no-plusplus": [
+      "error",
+      {
+        "allowForLoopAfterthoughts": true
+      }
     ]
   }
 }
