--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
   },
   "author": "Sych O.M.",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "socket.io": "^3.0.1",
+    "socket.io-client": "^3.0.1"
+  },
   "devDependencies": {
     "@babel/core": "^7.11.6",
     "@babel/node": "^7.10.5",
