--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,20 +1,12 @@
 {
-  "env": {
-    "browser": true,
-    "es6": true,
-    "jest/globals": true
-  },
-  "extends": "airbnb",
-  "plugins": [
-    "jest"
-  ],
-  "globals": {
-    "Atomics": "readonly",
-    "SharedArrayBuffer": "readonly"
-  },
+  "parser": "@babel/eslint-parser",
   "parserOptions": {
-    "ecmaVersion": 2018,
-    "sourceType": "module"
+    "requireConfigFile": false
+  },
+  "extends": "airbnb-base",
+  "plugins": ["jest"],
+  "env": {
+    "jest": true
   },
   "rules": {
     "arrow-parens": [
@@ -29,6 +21,7 @@
       {
         "allowForLoopAfterthoughts": true
       }
-    ]
+    ],
+    "no-console": "off"
   }
 }
