--- a/package.json
+++ b/package.json
@@ -7,24 +7,24 @@
   "scripts": {
     "test": "jest"
   },
-  "author": "Sych O.M.",
+  "engines": {
+    "node": ">=16"
+  },
+  "author": "Oleh Sych <olehsych@gmail.com>",
   "license": "ISC",
   "dependencies": {
     "socket.io": "^4.1.2",
     "socket.io-client": "^4.1.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.6",
-    "@babel/node": "^7.10.5",
-    "@babel/preset-env": "^7.11.5",
-    "babel-jest": "^26.3.0",
-    "eslint": "^7.2.0",
-    "eslint-config-airbnb": "^18.2.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jest": "^24.0.2",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-react": "^7.21.2",
-    "eslint-plugin-react-hooks": "^4.0.0",
-    "jest": "^26.4.2"
+    "@babel/core": "^7.16.7",
+    "@babel/eslint-parser": "^7.16.5",
+    "@babel/plugin-transform-modules-commonjs": "^7.17.9",
+    "eslint": "^8.6.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jest": "^26.1.5",
+    "jest": "^26.4.2",
+    "nodemon": "^2.0.15"
   }
 }
